# Memory-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  kustomization.yaml  litellm_config.yaml  pyproject.toml  pytest.ini  requirements.txt
documentation/: data_consistency_en.md  data_consistency_pl.md  demo.mkv  memory_utilization_en.md  memory_utilization_pl.md  technical_approach_en.md
example_conversations/: conv_001.json  conv_002.json  conv_003.json  conv_004.json  conv_005.json  conv_006.json
interface/api/: main.py  models.py
interface/cli/: main.py
interface/ui/: app.py
k8s/: api.yaml  configmap.yaml  elasticsearch.yaml  ingress.yaml  litellm-config.yaml  litellm-db-secret.yaml  litellm.yaml  namespace.yaml  ollama.yaml  postgres.yaml  redis.yaml  storage.yaml  ui.yaml  worker.yaml
outputs/extraction_pipeline_20260223_002444/: all_facts.json  conv_001_facts.json  conv_002_facts.json  conv_003_facts.json  conv_004_facts.json  conv_005_facts.json  conv_006_facts.json
outputs/extraction_pipeline_20260223_002529/: all_facts.json  conv_001_facts.json  conv_002_facts.json  conv_003_facts.json  conv_004_facts.json  conv_005_facts.json  conv_006_facts.json
src/: __init__.py  worker.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  models.py  prompts.py
src/deduplication/: __init__.py  dedup.py
src/memory/: __init__.py  elasticsearch_store.py  rag_manager.py  session_injector.py
src/pipeline/: __init__.py  extraction.py
src/providers/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py
(+9 files in other folders)
