[tool.poetry]
name = "personal-memory-module"
version = "0.1.0"
description = "Personal Memory Module — LLM fact extraction pipeline"
authors = ["filipsz <filip.szmid@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
google-genai = "^1.0"
openai = "^1.0"
python-dotenv = "^1.0"
loguru = "^0.7.3"
pydantic = "^2.12.5"
tenacity = "^9.1.4"
pydantic-settings = "^2.13.1"
elasticsearch = "^8.12.0"
fastapi = "^0.136.0"
uvicorn = "^0.45.0"
streamlit = "^1.56.0"
httpx = "^0.28.1"
litellm = "^1.60.0"
instructor = "^1.7.0"
rq = "^1.16.2"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
task-1-extract-facts = "interface.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
